package eapli.base.surveymanagement.antlr.eapli.base.surveymanagement.antlr;


import eapli.base.surveymanagement.domain.Questionnaire;

public class QuestionnaireVisitor extends SurveyBaseVisitor<Questionnaire> {}
